--- a/_/components/sass/styles.scss
+++ b/_/components/sass/styles.scss
@@ -128,18 +128,18 @@ body {
 
 // SECTION 7: Contact ------------------------------------ 
 .section7 {
+	color: #fff;
+	h2 {
+		color: #fff;
+	}
 	background: url(../../images/map.jpg) no-repeat center center;
 	background-image:
 		linear-gradient(
-			rgba(255, 255, 255, 0.8),
-			rgba(255, 255, 255, 0.8)
+			rgba(0, 0, 0, 0.8),
+			rgba(0, 0, 0, 0.8)
 		),
 		url(../../images/map.jpg);
-	//color: #fff;
-	h2 {
-		//color: #fff;
-	}
-}
+} //seection7
 
 // SECTION 8: Footer --------------------------------------
 .section8 {
